Judge/Temporary_Error/37.log
test\37\Code.cpp: In function 'int main()':
test\37\Code.cpp:35:40: error: 'setprecision' was not declared in this scope
             cout<<fixed<<setprecision(2)<<ALL2[i][b]<<" ";
                                        ^
